# kai-agent

./: .gitignore  Dockerfile.training  README.md  ROADMAP.md  pyproject.toml
data/: eval_dataset.json  training_data.jsonl
infrastructure/inference/: docker-compose.yaml
src/kai_agent/: attention_inspector.py  generate_eval.py  ingest.py  ingest_new.py  legacy_log_db.py  memory.py  rag.py  rag_2.py  reranker.py  retrieve.py  run_eval.py  setup_memory.py
tests/: test_attention.py
training/: merge.py  requirements.txt  train.py
