[project]
name = "kai-agent"
version = "0.1.0"
description = "AI Security Agent Study Project"
authors = [
    {name = "Paulo Jauregui"}
]
readme = "README.md"
requires-python = ">=3.12, < 3.14"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "transformers (>=5.0.0,<6.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "sentence-transformers (>=5.2.1,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pymilvus (>=2.6.0)",
    "openai (>=2.15.0,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "deepeval (>=3.8.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.1.0"
isort = "^7.0.0"

